--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 <div id="done-out"></div>
 <!-- <script src="/public/map/done_orders.js" type="module"></script> -->
 <script type="module">
-  import { ORDERS } from "/current_orders.js";
+  import { ORDERS } from "/alekseybessonovkgd.github.io/logistic/current_orders.js";
   Handlebars.registerHelper("x5", function (aNumber) {
     return aNumber * 5;
   });
@@ -676,7 +676,7 @@
   <div class="flex flex-col">
     <a href="https://rdlog.ru/" target="_blank" class="block">
       <img
-        src="/logo/РЖД.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/РЖД.png"
         alt="Описание изображения 1"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -687,7 +687,7 @@
   <div class="flex flex-col">
     <a href="https://glsystem.net/" target="_blank" class="block">
       <img
-        src="/logo/Garpix_Load_System.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/Garpix_Load_System.png"
         alt="Описание изображения 2"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -698,7 +698,7 @@
   <div class="flex flex-col">
     <a href="https://lp.market.master-tms.ru/" target="_blank" class="block">
       <img
-        src="/logo/MasterTMS.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/MasterTMS.png"
         alt="Описание изображения 3"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -709,7 +709,7 @@
   <div class="flex flex-col">
     <a href="https://www.vezetvsem.ru/" target="_blank" class="block">
       <img
-        src="/logo/везет всем.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/везет всем.png"
         alt="Описание изображения 4"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -720,7 +720,7 @@
   <div class="flex flex-col">
     <a href="https://ati.su/" target="_blank" class="block">
       <img
-        src="/logo/атису(2).jpg"
+        src="/alekseybessonovkgd.github.io/logistic/logo/атису(2).jpg"
         alt="Описание изображения 5"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -731,7 +731,7 @@
   <div class="flex flex-col">
     <a href="https://dostavka.yandex.ru/magistral/" target="_blank" class="block">
       <img
-        src="/logo/яндекс (магистрали).png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/яндекс (магистрали).png"
         alt="Описание изображения 6"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -742,7 +742,7 @@
   <div class="flex flex-col">
     <a href="https://rynda.io/ahoy" target="_blank" class="block">
       <img
-        src="/logo/рында.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/рында.png"
         alt="Описание изображения 7"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -753,7 +753,7 @@
   <div class="flex flex-col">
     <a href="https://www.cdek.ru" target="_blank" class="block">
       <img
-        src="/logo/large_logo-cdek.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/large_logo-cdek.png"
         alt="Описание изображения 8"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -764,7 +764,7 @@
   <div class="flex flex-col">
     <a href="https://www.pochta.ru/" target="_blank" class="block">
       <img
-        src="/logo/почта.jpg"
+        src="/alekseybessonovkgd.github.io/logistic/logo/почта.jpg"
         alt="Описание изображения 9"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -775,7 +775,7 @@
   <div class="flex flex-col">
     <a href="https://rdlog.ru/" target="_blank" class="block">
       <img
-        src="/logo/таможня.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/таможня.png"
         alt="Описание изображения 10"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -786,7 +786,7 @@
   <div class="flex flex-col">
     <a href="https://pb.nalog.ru/" target="_blank" class="block">
       <img
-        src="/logo/ФНС.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/ФНС.png"
         alt="Описание изображения 11"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -797,7 +797,7 @@
   <div class="flex flex-col">
     <a href="https://www.alta.ru/" target="_blank" class="block">
       <img
-        src="/logo/альта-софт.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/альта-софт.png"
         alt="Описание изображения 12"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -808,7 +808,7 @@
   <div class="flex flex-col">
     <a href="https://складоискатель.ru/" target="_blank" class="block">
       <img
-        src="/logo/складоискатель.jpeg"
+        src="/alekseybessonovkgd.github.io/logistic/logo/складоискатель.jpeg"
         alt="Описание изображения 13"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -819,7 +819,7 @@
   <div class="flex flex-col">
     <a href="https://www.fesco.ru" target="_blank" class="block">
       <img
-        src="/logo/феско.jpg"
+        src="/alekseybessonovkgd.github.io/logistic/logo/феско.jpg"
         alt="Описание изображения 14"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -830,7 +830,7 @@
   <div class="flex flex-col">
     <a href="https://cargo.rzd.ru/ru/9802?ysclid=m7tdoq8p3h218674586" target="_blank" class="block">
       <img
-        src="/logo/РЖД.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/РЖД.png"
         alt="Описание изображения 15"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -841,7 +841,7 @@
   <div class="flex flex-col">
     <a href="https://www.openrailwaymap.org/index.php" target="_blank" class="block">
       <img
-        src="/logo/РЖД.png"
+        src="/alekseybessonovkgd.github.io/logistic/logo/РЖД.png"
         alt="Описание изображения 16"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
@@ -981,7 +981,7 @@
       <div class="flex">
         <img
           class="h-8 object-scale-down"
-          src="/icons/common.png"
+          src="/alekseybessonovkgd.github.io/logistic/icons/common.png"
         />
         универсальный
       </div>
@@ -995,7 +995,7 @@
       <div class="flex">
         <img
           class="h-8 object-scale-down"
-          src="/icons/cold.png"
+          src="/alekseybessonovkgd.github.io/logistic/icons/cold.png"
         />
         охлажденный
       </div>
@@ -1040,7 +1040,7 @@
       </div>
     </div>
     <div id="map" class="flex-grow"></div>
-    <script src="/map.js" type="module"></script>
+    <script src="/alekseybessonovkgd.github.io/logistic/map.js" type="module"></script>
   </div>
 </div>
 <div>
@@ -1178,7 +1178,7 @@
       <button class="btn" onclick="add_prepared_to_group()">
         Сформировать маршрут
       </button>
-      <script src="/get_modal_inputs.js" type="module"></script>
+      <script src="/alekseybessonovkgd.github.io/logistic/get_modal_inputs.js" type="module"></script>
     </div>
     <div class="modal-action w-[80vh]">
       <form method="dialog">
@@ -1373,7 +1373,7 @@
 <div id="mono-out"></div>
 <!-- <script src="/public/map/mono_orders.js" type="module"></script> -->
 <script type="module">
-  import { ORDERS } from "/mono_orders.js"
+  import { ORDERS } from "/alekseybessonovkgd.github.io/logistic/mono_orders.js"
   var source = document.getElementById("mono-template").innerHTML;
   var template = Handlebars.compile(source);
   var context = { orders: ORDERS };
