--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
             <div class="grid grid-cols-4 gap-8 max-w-4xl mx-auto">
   
   <div class="flex flex-col">
-    <a href="https://rdlog.ru/" target="_blank" class="block">
+    <a href="https://rzdlog.ru/" target="_blank" class="block">
       <img
         src="/logistic/logo/РЖД.png"
         alt="Описание изображения 1"
