--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
   <div class="flex flex-col">
     <a href="https://www.openrailwaymap.org/index.php" target="_blank" class="block">
       <img
-        src="/logistic/logo/РЖД.png"
+        src="/logistic/logo/lastimg.png"
         alt="Описание изображения 16"
         class="w-full h-auto rounded-lg shadow-md hover:shadow-lg transition-shadow"
       />
