--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             class="p-2 mb-2 bg-base-200 hover:bg-base-300 rounded cursor-pointer"
             for="tab9"
             id="tab9_label"
-            >Избранное
+            >Избранные контрагенты
             <script>
               
               me().on("click", (ev) => {
@@ -295,7 +295,18 @@
             <div class="container pl-10 flex flex-col gap-4">
   <div class="text-2xl font-semibold">Профиль</div>
   <div class="text-lg font-semibold">
-    Имя: test_name
+полное наименование юридического лица / ИП
+почтовый адрес
+юридический адрес
+ОГРН
+ИНН
+КПП
+БИК
+Р/С
+К/С
+Директор (заполняется для юр.лица)
+электронная почта
+телефон
   </div>
   <div class="text-lg font-semibold">Email: test_mail</div>
     <div class="badge badge-success gap-2">
