--- a/index.html
+++ b/index.html
@@ -295,18 +295,17 @@
             <div class="container pl-10 flex flex-col gap-4">
   <div class="text-2xl font-semibold">Профиль</div>
   <div class="text-lg font-semibold">
-полное наименование юридического лица / ИП
-почтовый адрес
-юридический адрес
-ОГРН
-ИНН
-КПП
-БИК
-Р/С
-К/С
-Директор (заполняется для юр.лица)
-электронная почта
-телефон
+полное наименование юридического лица / ИП <br>
+почтовый адрес<br>
+ОГРН<br>
+ИНН<br>
+КПП<br>
+БИК<br>
+Р/С<br>
+К/С<br>
+Директор (заполняется для юр.лица)<br>
+электронная почта<br>
+телефон<br>
   </div>
   <div class="text-lg font-semibold">Email: test_mail</div>
     <div class="badge badge-success gap-2">
