--- a/index.html
+++ b/index.html
@@ -1415,6 +1415,26 @@
             <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
             <p> support </p>
           </div>
+
+        </div>
+        
+        <input
+          type="radio"
+          name="tabs"
+          id="tab11"
+          class="hidden peer/tab11"
+          checked
+        />
+        <div class="tab-content peer-checked/tab11:block hidden">
+          <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
+          <tr>
+            <td>Наименование контрольной точки</td>
+            <td>Тип контрольной точки</td>
+            <td>Адрес контрольной точки</td>
+            <td>Координаты контрольной точки</td>
+            <td>Выбрать соответствующий маркер</td>
+          </tr> 
+        </div>
         
       </div>
     </div>
