--- a/index.html
+++ b/index.html
@@ -1427,6 +1427,8 @@
         />
         <div class="tab-content peer-checked/tab11:block hidden">
           <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
+          <table class="min-w-full table-auto border">
+            <p>Ввод точек накопления груза на карту</p>
           <tr>
             <td>Наименование контрольной точки</td>
             <td>Тип контрольной точки</td>
@@ -1434,6 +1436,14 @@
             <td>Координаты контрольной точки</td>
             <td>Выбрать соответствующий маркер</td>
           </tr> 
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          </table>
         </div>
         
       </div>
