--- a/index.html
+++ b/index.html
@@ -1427,8 +1427,8 @@
         />
         <div class="tab-content peer-checked/tab11:block hidden">
           <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
-          <table class="min-w-full table-auto border">
-            <p>Ввод точек накопления груза на карту</p>
+          <p>Ввод точек накопления груза на карту</p>
+<!--           <table class="min-w-full table-auto border">
           <tr>
             <td>Наименование контрольной точки</td>
             <td>Тип контрольной точки</td>
@@ -1443,7 +1443,7 @@
             <td></td>
             <td></td>
           </tr>
-          </table>
+          </table> -->
         </div>
         
       </div>
