--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,8 @@
           </div>
 
         </div>
-        
+
+        <div>
         <input
           type="radio"
           name="tabs"
@@ -1428,6 +1429,7 @@
         <div class="tab-content peer-checked/tab11:block hidden">
           <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
           <p>Ввод точек накопления груза на карту</p>
+          порт - Межевой канал, 5, Санкт-Петербург
 <!--           <table class="min-w-full table-auto border">
           <tr>
             <td>Наименование контрольной точки</td>
@@ -1445,7 +1447,7 @@
           </tr>
           </table> -->
         </div>
-        
+        </div>
       </div>
     </div>
   </body>
