--- a/index.html
+++ b/index.html
@@ -1428,8 +1428,10 @@
         />
         <div class="tab-content peer-checked/tab11:block hidden">
           <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
+           <div align="left">
           <p>Ввод точек накопления груза на карту</p>
           порт - Межевой канал, 5, Санкт-Петербург
+          </div>
 <!--           <table class="min-w-full table-auto border">
           <tr>
             <td>Наименование контрольной точки</td>
