--- a/index.html
+++ b/index.html
@@ -1428,7 +1428,7 @@
         />
         <div class="tab-content peer-checked/tab11:block hidden">
           <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
-           <div align="left">
+           <div class="flex-1 p-6 relative">
           <p>Ввод точек накопления груза на карту</p>
           порт - Межевой канал, 5, Санкт-Петербург
           </div>
