--- a/index.html
+++ b/index.html
@@ -1415,10 +1415,7 @@
             <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
             <p> support </p>
           </div>
-
-        </div>
-
-        <div>
+       <div>
         <input
           type="radio"
           name="tabs"
@@ -1428,28 +1425,31 @@
         />
         <div class="tab-content peer-checked/tab11:block hidden">
           <!-- <h1 class="text-2xl font-bold">Поддержка</h1> -->
-           <div class="flex-1 p-6 relative">
+           <div >
           <p>Ввод точек накопления груза на карту</p>
-          порт - Межевой канал, 5, Санкт-Петербург
+          
           </div>
-<!--           <table class="min-w-full table-auto border">
+          <table  class="min-w-full">
           <tr>
-            <td>Наименование контрольной точки</td>
-            <td>Тип контрольной точки</td>
-            <td>Адрес контрольной точки</td>
-            <td>Координаты контрольной точки</td>
-            <td>Выбрать соответствующий маркер</td>
+            <td style="border: 1px solid black;">Наименование контрольной точки</td>
+            <td style="border: 1px solid black;">Тип контрольной точки</td>
+            <td style="border: 1px solid black;">Адрес контрольной точки</td>
+            <td style="border: 1px solid black;">Координаты контрольной точки</td>
+            <td style="border: 1px solid black;">Выбрать соответствующий маркер</td>
           </tr> 
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td style="border: 1px solid black;">>порт</td>
+            <td style="border: 1px solid black;">перегрузочная</td>
+            <td style="border: 1px solid black;">межевой канал, дом 5</td>
+            <td style="border: 1px solid black;"> 1</td>
+            <td style="border: 1px solid black;"></td>
           </tr>
-          </table> -->
+          </table>
         </div>
         </div>
+        </div>
+
+ 
       </div>
     </div>
   </body>
