--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
             <td style="border: 1px solid black;">перегрузочная</td>
             <td style="border: 1px solid black;">межевой канал, дом 5</td>
             <td style="border: 1px solid black;"> 1</td>
-            <td style="border: 1px solid black;"></td>
+            <td style="border: 1px solid black;"><img src="/logistic/icons/2.jpg" alt=""></td>
           </tr>
           </table>
         </div>
