--- a/index.html
+++ b/index.html
@@ -1270,6 +1270,7 @@
             <th class="border">№</th>
             <th class="border">Клиент</th>
             <th class="border">доп. Расходы</th>
+            <th class="border">Комиссия экспедитора</th>
             <th class="border">Сумма по счету</th>
             <th class="border">Статус</th>
           </tr>
@@ -1279,6 +1280,7 @@
             <td class="border">{{ name }}</td>
             <td class="border"> </td>
             <td class="border">{{ price }}</td>
+            <th class="border"> <input type="number"> </th>
             <td class="border"> в обработке </td>
           </tr>
           {{/each}}
