--- a/index.html
+++ b/index.html
@@ -1204,6 +1204,8 @@
         placeholder="Суммарная цена"
         class="input"
       />
+      <p>введите общую протяженность пути</p>
+      <input type="number">
       <button class="btn" onclick="add_prepared_to_group()">
         Сформировать маршрут
       </button>
