--- a/index.html
+++ b/index.html
@@ -1204,8 +1204,11 @@
         placeholder="Суммарная цена"
         class="input"
       />
-      <p>введите общую протяженность пути</p>
-      <input type="number">
+      <input 
+      placeholder="общая протяженность пути"
+      type="number"
+      class="input"
+      />
       <button class="btn" onclick="add_prepared_to_group()">
         Сформировать маршрут
       </button>
